reset from a previous point and re-added exporter team index.

--- a/onnx/exporterteam.html
+++ b/onnx/exporterteam.html
@@ -39,7 +39,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-    <title>ONNX Converters Team</title>
+    <title>ONNX Exporter Team</title>
 </head>
 
 <body>
@@ -48,9 +48,9 @@
             <img class="d-block mx-auto mb-4"
                 src="https://upload.wikimedia.org/wikipedia/commons/c/c0/ONNX_logo_main.png" alt="ONNX Logo" width="232"
                 height="59.5">
-            <h1 class="display-5 fw-bold text-body-emphasis">ONNX Converters Team</h1>
+            <h1 class="display-5 fw-bold text-body-emphasis">ONNX Exporter Team</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Welcome to the landing page for the ONNX Converters Team at Microsoft. <br/> We hope your stay is
+                <p class="lead mb-4">Welcome to the landing page for the ONNX Exporter Team at Microsoft. <br/> We hope your stay is
                     short and that you quickly get what you need!</p>
             </div>
         </div>
@@ -60,7 +60,7 @@
             <h1 class="display-5 fw-bold text-body-emphasis">Issue Submission</h1>
             <div class="container">
                 <p class="lead">
-                    Have an issue converting a PyTorch or TensorFlow model to ONNX model? <br />Submit an issue to get help ASAP.
+                    Have an issue exporting a PyTorch or TensorFlow model to ONNX model? <br />Submit an issue to get help ASAP.
                 </p>
                 <hr class="my-5">
                 <div class="row">
