--- a/onnx/index.html
+++ b/onnx/index.html
@@ -1,85 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <script type="text/javascript" src="https://js.monitor.azure.com/scripts/c/ms.analytics-web-3.min.js">
-    </script>
+  <head>
+    <script
+      type="text/javascript"
+      src="https://js.monitor.azure.com/scripts/c/ms.analytics-web-3.min.js"
+    ></script>
 
     <script type="text/javascript">
-        const analytics = new oneDS.ApplicationInsights();
-        var config = {
-            instrumentationKey: "360b0e675e0044398fd28c8bdf711b8e-1fe5434d-ee99-4837-99cc-a3a16462d82d-7262",
-            channelConfiguration: { // Post channel configuration
-                eventsLimitInMem: 50
-            },
-            propertyConfiguration: { // Properties Plugin configuration 
-                env: "PPE" // Environment can be set to PPE or PROD as needed. 
-            },
-            webAnalyticsConfiguration: { // Web Analytics Plugin configuration
-                //urlCollectQuery:true, 
-                autoCapture: {
-                    scroll: true,
-                    pageView: true,
-                    onLoad: true,
-                    onUnload: true,
-                    click: true,
-                    resize: true,
-                    jsError: true
-                }
-            }
-        };
-        //Initialize SDK
-        analytics.initialize(config, []);
+      const analytics = new oneDS.ApplicationInsights();
+      var config = {
+        instrumentationKey:
+          "360b0e675e0044398fd28c8bdf711b8e-1fe5434d-ee99-4837-99cc-a3a16462d82d-7262",
+        channelConfiguration: {
+          // Post channel configuration
+          eventsLimitInMem: 50,
+        },
+        propertyConfiguration: {
+          // Properties Plugin configuration
+          env: "PPE", // Environment can be set to PPE or PROD as needed.
+        },
+        webAnalyticsConfiguration: {
+          // Web Analytics Plugin configuration
+          //urlCollectQuery:true,
+          autoCapture: {
+            scroll: true,
+            pageView: true,
+            onLoad: true,
+            onUnload: true,
+            click: true,
+            resize: true,
+            jsError: true,
+          },
+        },
+      };
+      //Initialize SDK
+      analytics.initialize(config, []);
     </script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://onnx.ai/images/onnx-favicon.png" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
-        integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="https://onnx.ai/images/onnx-favicon.png"
+      type="image/gif"
+      sizes="16x16"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+      integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e"
+      crossorigin="anonymous"
+    />
     <title>ONNX Directory</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <section class="hero bg-white">
-        <div class="px-4 py-5 text-center">
-            <img class="d-block mx-auto mb-4"
-                src="https://upload.wikimedia.org/wikipedia/commons/c/c0/ONNX_logo_main.png" alt="ONNX Logo" width="232"
-                height="59.5">
-            <h1 class="display-5 fw-bold text-body-emphasis">ONNX at Microsoft Directory</h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Welcome to the Microsoft ONNX directory. <br/> We hope your stay is
-                    short and that you quickly get what you need!</p>
-            </div>
+      <div class="px-4 py-5 text-center">
+        <img
+          class="d-block mx-auto mb-4"
+          src="https://upload.wikimedia.org/wikipedia/commons/c/c0/ONNX_logo_main.png"
+          alt="ONNX Logo"
+          width="232"
+          height="59.5"
+        />
+        <h1 class="display-5 fw-bold text-body-emphasis">
+          ONNX at Microsoft Directory
+        </h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">
+            Welcome to the Microsoft ONNX directory. <br />
+            We hope your stay is short and that you quickly get what you need!
+          </p>
+          <p class="lead mb-4">
+            All below links are <a href="https://aka.ms">aka.ms/</a> supported,
+            so feel free to use those in the future.
+          </p>
         </div>
+      </div>
     </section>
     <section class="container">
-        <div class="h3 text-center">ONNX Links</div>
-        <div class="row">
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnx" class="btn btn-primary">onnx</a> ONNX.ai Website</div>
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnx/exportissue" class="btn btn-primary">onnx/exportissue</a> Export issue directory</div>
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnx/board" class="btn btn-primary">onnx/board</a> ONNX Exporter team issue board</div>
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnx/repo" class="btn btn-primary">onnx/repo</a> ONNX GitHub Repo</div>
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnx/bugs" class="btn btn-primary">onnx/bugs</a> ONNX Bugs on GitHub</div>
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnx/pulls" class="btn btn-primary">onnx/pulls</a> ONNX PRs on GitHub</div>
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnx/operators" class="btn btn-primary">onnx/operators</a> ONNX Operators</div>
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnx/modeltypes" class="btn btn-primary">onnx/modeltypes</a> Model classifications (ADO)</div>
+      <div class="h3 text-center">ONNX Links</div>
+      <div class="row">
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnx" class="btn btn-primary">onnx</a> ONNX.ai
+          Website
         </div>
-        <div class="mt-5 h3 text-center">ONNX Script Links</div>
-        <div class="row">
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnxscript/pulls" class="btn btn-primary">onnxscript/pulls</a> ONNX Script Pull PRs</div>
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnxscript/bugs" class="btn btn-primary">onnxscript/bugs</a> ONNX Script bugs</div>
-            <div class="col-md-4 p-3"><a href="https://aka.ms/onnxscript/issues" class="btn btn-primary">onnxscript/issues</a> ONNX Script issues</div>
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnx/exportissue" class="btn btn-primary"
+            >onnx/exportissue</a
+          >
+          Export issue directory
         </div>
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnx/board" class="btn btn-primary"
+            >onnx/board</a
+          >
+          ONNX Exporter team issue board
+        </div>
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnx/repo" class="btn btn-primary"
+            >onnx/repo</a
+          >
+          ONNX GitHub Repo
+        </div>
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnx/bugs" class="btn btn-primary"
+            >onnx/bugs</a
+          >
+          ONNX Bugs on GitHub
+        </div>
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnx/pulls" class="btn btn-primary"
+            >onnx/pulls</a
+          >
+          ONNX PRs on GitHub
+        </div>
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnx/operators" class="btn btn-primary"
+            >onnx/operators</a
+          >
+          ONNX Operators
+        </div>
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnx/modeltypes" class="btn btn-primary"
+            >onnx/modeltypes</a
+          >
+          Model classifications (ADO)
+        </div>
+      </div>
+      <div class="mt-5 h3 text-center">ONNX Script Links</div>
+      <div class="row">
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnxscript/pulls" class="btn btn-primary"
+            >onnxscript/pulls</a
+          >
+          ONNX Script Pull PRs
+        </div>
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnxscript/bugs" class="btn btn-primary"
+            >onnxscript/bugs</a
+          >
+          ONNX Script bugs
+        </div>
+        <div class="col-md-4 p-3">
+          <a href="https://aka.ms/onnxscript/issues" class="btn btn-primary"
+            >onnxscript/issues</a
+          >
+          ONNX Script issues
+        </div>
+      </div>
     </section>
     <footer class="py-5 text-center text-secondary">
-        © Microsoft. All rights reserved.
+      © Microsoft. All rights reserved.
     </footer>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-
+    crossorigin="anonymous"
+  ></script>
 </html>
