--- a/website/src/app.html
+++ b/website/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="business">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
