Add On-Device Training Mac & iOS package installation options (#16992)

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ Console.WriteLine(outputs[0].AsTensor<float>()[0]);</code>
 											<div class="col-md-3 r-heading">
 												<h3 id="ot_selectOS">Platform</h3>
 												<p id="ot_decriptionOS" class="sr-only">
-													Platform list contains three items
+													Platform list contains five items
 												</p>
 											</div>
 											<div class="col-md-9 r-content pr-0 pl-md-4" role="listbox"
@@ -641,8 +641,16 @@ Console.WriteLine(outputs[0].AsTensor<float>()[0]);</code>
 														<span>Windows</span>
 													</div>
 													<div class="col r-option" role="option" tabindex="0"
+														aria-selected="true" id="ot_mac">
+														<span>Mac</span>
+													</div>
+													<div class="col r-option" role="option" tabindex="0"
 														aria-selected="true" id="ot_android">
 														<span>Android</span>
+													</div>
+													<div class="col r-option" role="option" tabindex="0"
+														aria-selected="true" id="ot_ios">
+														<span>iOS</span>
 													</div>
 												</div>
 											</div>
@@ -652,7 +660,7 @@ Console.WriteLine(outputs[0].AsTensor<float>()[0]);</code>
 											<div class="col-md-3 r-heading">
 												<h3 id="ot_selectLanguage">API</h3>
 												<p id="ot_decriptionLanguage" class="sr-only">
-													API list contains five items
+													API list contains six items
 												</p>
 											</div>
 											<div class="col-md-9 r-content pr-0 pl-md-4" role="listbox"
@@ -678,6 +686,10 @@ Console.WriteLine(outputs[0].AsTensor<float>()[0]);</code>
 													<div class="col r-option" role="option" tabindex="0"
 														aria-selected="true" id="ot_java">
 														<span>Java</span>
+													</div>
+													<div class="col r-option" role="option" tabindex="0"
+														aria-selected="true" id="ot_objc">
+														<span>Obj-C</span>
 													</div>
 												</div>
 											</div>
