added build option

--- a/index.html
+++ b/index.html
@@ -724,6 +724,29 @@ Console.WriteLine(outputs[0].AsTensor<float>()[0]);</code>
 											</div>
 										</div>
 
+										<div class="row r-wrap mb-1 mb-md-0 mr-0">
+											<div class="col-md-3 r-heading">
+												<h3 id="ot_selectBuild">Build</h3>
+												<p id="ot_decriptionBuild" class="sr-only">
+													Build list contains two items
+												</p>
+											</div>
+											<div class="col-md-9 r-content pr-0 pl-md-4" role="listbox"
+												id="ot_listbox-4" aria-labelledby="ot_selectBuild"
+												aria-describedby="ot_decriptionBuild">
+												<div class="row ot_build">
+													<div class="col r-option version" role="option" tabindex="0"
+														aria-selected="true" id="ot_stable">
+														<span><abbr>Stable</abbr></span>
+													</div>
+													<div class="col r-option version" role="option" tabindex="-1"
+														aria-selected="true" id="ot_nightly">
+														<span><abbr>Preview (Nightly)</abbr></span>
+													</div>
+												</div>
+											</div>
+										</div>
+
 										<div class="row r-wrap command-block row-eq-height mr-0">
 											<div class="col-md-3 r-heading">
 												<h3 class="text-white" id="ot_selectRunCommand">
