add deezer logo/quote

--- a/index.html
+++ b/index.html
@@ -901,6 +901,13 @@ Console.WriteLine(outputs[0].AsTensor<float>()[0]);</code>
 							<div class="row blue-title-columns">
 								<div class="col-4 col-md-2 mb-4 mb-md-0">
 									<div class="customer-logo text-center">
+										<a href="community.html#deezer"><img
+												src="./images/logos/deezer-logo.png"
+												alt="Deezer logo" /></a>
+									</div>
+								</div>
+								<div class="col-4 col-md-2 mb-4 mb-md-0">
+									<div class="customer-logo text-center">
 										<a href="community.html#hugging-face"><img
 												src="./images/logos/huggingface-logo.png" alt="Hugging Face logo" /></a>
 									</div>
@@ -928,13 +935,6 @@ Console.WriteLine(outputs[0].AsTensor<float>()[0]);</code>
 										<a href="community.html#intelligenza-etica"><img
 												src="./images/logos/intelligenza-etica-logo.png"
 												alt="Intelligenza Etica logo"></a>
-									</div>
-								</div>
-								<div class="col-4 col-md-2 mb-4 mb-md-0">
-									<div class="customer-logo text-center">
-										<a href="community.html#visual-studio"><img
-												src="./images/logos/visual-studio-logo.png"
-												alt="Visual Studio logo" /></a>
 									</div>
 								</div>
 							</div>
