--- a/community.html
+++ b/community.html
@@ -126,7 +126,7 @@
                                     <img src="./images/logos/deezer-logo.png" alt="Deezer logo">
                                 </div>
                                 <div class="col-12 col-md-9 quote">&ldquo;At Deezer, we use ONNX Runtime for machine learning powered features for music recommendations in our streaming service. ONNX Runtime's C API is easy to integrate with our software stack and enables us to run and deploy transformer models with great performance for real-time use cases.&rdquo;<br/><br/>
-                                    <div class="quote-attribution text-right">&ndash;Mathieu Morlon, Machine Learning Engineer, Deezer</div>
+                                    <div class="quote-attribution text-right">&ndash;Mathieu Morlon, Software Engineer, Deezer</div>
                                 </div>						
                             </div>
                             <div id = "intelligenza-etica" class="quotebox row col-12 col-md-12 mb-4">
