[Website] Add Deezer quote/logo (#17360)
### Description
- Adds Deezer quote/logo
- Removes MS Visual Studio logo/quote
- Staged: https://faxu.github.io/onnxruntime/community.html#deezer /
https://faxu.github.io/onnxruntime/#logos

--- a/community.html
+++ b/community.html
@@ -121,6 +121,14 @@
                                     <div class="quote-attribution text-right">&ndash;Aaron Allsbrook, CTO & Founder, ClearBlade</div>
                                 </div>						
                             </div>
+                            <div id = "deezer" class="quotebox row col-12 col-md-12 mb-4">
+                                <div class="customer-logo col-12 col-md-3 text-center">
+                                    <img src="./images/logos/deezer-logo.png" alt="Deezer logo">
+                                </div>
+                                <div class="col-12 col-md-9 quote">&ldquo;At Deezer, we use ONNX Runtime for machine learning powered features for music recommendations in our streaming service. ONNX Runtime's C API is easy to integrate with our software stack and enables us to run and deploy transformer models with great performance for real-time use cases.&rdquo;<br/><br/>
+                                    <div class="quote-attribution text-right">&ndash;Mathieu Morlon, Software Engineer, Deezer</div>
+                                </div>						
+                            </div>
                             <div id = "intelligenza-etica" class="quotebox row col-12 col-md-12 mb-4">
                                 <div class="customer-logo col-12 col-md-3 text-center">
                                     <img src="./images/logos/intelligenza-etica-logo.png" alt="Intelligenza Etica logo">
@@ -159,14 +167,6 @@
                                 </div>
                                 <div class="col-12 col-md-9 quote">&ldquo;We are excited to support ONNX Runtime on the Intel® Distribution of OpenVINO™. This accelerates machine learning inference across Intel hardware and gives developers the flexibility to choose the combination of Intel hardware that best meets their needs from CPU to VPU or FPGA.&rdquo;<br/><br/>
                                     <div class="quote-attribution text-right">&ndash;Jonathan Ballon, Vice President and General Manager, Intel Internet of Things Group</div>
-                                </div>						
-                            </div>
-                            <div id = "visual-studio" class="quotebox row col-12 col-md-12 mb-4">
-                                <div class="customer-logo col-12 col-md-3 text-center">
-                                    <img src="./images/logos/visual-studio-logo.png" alt="Visual Studio logo">
-                                </div>
-                                <div class="col-12 col-md-9 quote">&ldquo;We use ONNX Runtime to accelerate model training for a 300M+ parameters model that powers code autocompletion in Visual Studio IntelliCode.&rdquo;<br/><br/>
-                                    <div class="quote-attribution text-right">&ndash;Neel Sundaresan, Director SW Engineering, Data & AI, Developer Division, Microsoft</div>
                                 </div>						
                             </div>
                             <div id = "navitaire" class="quotebox row col-12 col-md-12 mb-4">
