updated orttraining python installation instruction so that you don't have to manually install prereqs & updated CUDA option to include version

--- a/index.html
+++ b/index.html
@@ -709,8 +709,8 @@ Console.WriteLine(outputs[0].AsTensor<float>()[0]);</code>
 												aria-describedby="ot_decriptionHardwareAcceleration">
 												<div class="row ot_hardwareAcceleration">
 													<div class="col r-option version" role="option" tabindex="0"
-														aria-selected="true" id="ot_CUDA">
-														<span><abbr>CUDA</abbr></span>
+														aria-selected="true" id="ot_CUDA118">
+														<span><abbr>CUDA 11.8</abbr></span>
 													</div>
 													<div class="col r-option version" role="option" tabindex="-1"
 														aria-selected="false" id="ot_ROCm">
