--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
                         <a class="nav-link pr-3" href="./docs">Docs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pr-3" href="./blogs.html">Blogs</a>
+                        <a class="nav-link pr-3" href="./blogs">Blogs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pr-3" href="./about.html">About</a>
