--- a/blogs/index.html
+++ b/blogs/index.html
@@ -44,16 +44,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>ONNX Runtime | Community</title>
-    <link rel="icon" href="./images/ONNXRuntime-Favicon.png" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="icon" href="../images/ONNXRuntime-Favicon.png" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/css/bootstrap.min.css"
         integrity="sha512-rt/SrQ4UNIaGfDyEXZtNcyWvQeOq0QLygHluFQcSjaGB04IxWhal71tKuzP6K8eYXYB6vJV4pHkXcmFGGQ1/0w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="../css/custom.css">
+    <link rel="stylesheet" href="../css/responsive.css">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
         <div class="top-banner-bg">
 
             <!-- Partial header.html Start-->
-            <div w3-include-html="header.html"></div>
+            <div w3-include-html="../header.html"></div>
             <!-- Partial header.html End-->
 
             <div id="skipMain" role="main">
@@ -83,7 +83,7 @@
     </div>
     </div>
     <!-- Partial footer.html Start-->
-    <div w3-include-html="footer.html"></div>
+    <div w3-include-html="../footer.html"></div>
     <!-- Partial footer.html End-->
 
     <a id="back-to-top" href="JavaScript:void(0);" class="btn btn-lg back-to-top" role="button"
@@ -118,7 +118,7 @@
 
 </body>
 
-<script src="./js/w3.js"></script>
+<script src="../js/w3.js"></script>
 <script>w3.includeHTML();</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
 	integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
@@ -126,5 +126,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/js/bootstrap.min.js"
 	integrity="sha512-7rusk8kGPFynZWu26OKbTeI+QPoYchtxsmPeBqkHIEXJxeun4yJ4ISYe7C6sz9wdxeE1Gk3VxsIWgCZTc+vX3g=="
 	crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="./js/custom.js"></script>
+<script src="../js/custom.js"></script>
 </html>
