--- a/blogs/index.html
+++ b/blogs/index.html
@@ -62,7 +62,7 @@
         <div class="top-banner-bg">
 
             <!-- Partial header.html Start-->
-            <div w3-include-html="../header.html"></div>
+            <div w3-include-html="../subheader.html"></div>
             <!-- Partial header.html End-->
 
             <div id="skipMain" role="main">
