--- a/blogs/index.html
+++ b/blogs/index.html
@@ -83,7 +83,7 @@
     </div>
     </div>
     <!-- Partial footer.html Start-->
-    <div w3-include-html="../footer.html"></div>
+    <div w3-include-html="../subfooter.html"></div>
     <!-- Partial footer.html End-->
 
     <a id="back-to-top" href="JavaScript:void(0);" class="btn btn-lg back-to-top" role="button"
