--- a/footer.html
+++ b/footer.html
@@ -41,7 +41,7 @@
                     <h3 class="footer-heading">Resources</h3>
                     <ul class="list-unstyled text-small">
                         <li class="mb-2">
-                            <a target="_blank" href="./blogs.html">
+                            <a target="_blank" href="./blogs">
                                 <span class="link-content">Blogs</span><span class="link-arrow fa fa-angle-right"></span></a>
                         </li>
                         <li class="mb-2">
