--- a/header.html
+++ b/header.html
@@ -32,7 +32,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pr-3" target="_blank" href="http://github.com/microsoft/onnxruntime">GitHub</a>
+                        <a class="nav-link pr-3" target="_blank" href="https://github.com/microsoft/onnxruntime">GitHub</a>
                     </li>
             </div>
         </div>
