--- a/blogs/index.html
+++ b/blogs/index.html
@@ -62,7 +62,7 @@
         <div class="top-banner-bg">
 
             <!-- Partial header.html Start-->
-            <div w3-include-html="../subheader.html"></div>
+            <div w3-include-html="header.html"></div>
             <!-- Partial header.html End-->
 
             <div id="skipMain" role="main">
@@ -83,7 +83,7 @@
     </div>
     </div>
     <!-- Partial footer.html Start-->
-    <div w3-include-html="../subfooter.html"></div>
+    <div w3-include-html="footer.html"></div>
     <!-- Partial footer.html End-->
 
     <a id="back-to-top" href="JavaScript:void(0);" class="btn btn-lg back-to-top" role="button"
