--- a/blogs/footer.html
+++ b/blogs/footer.html
@@ -6,11 +6,11 @@
                     <h3 class="footer-heading">Get Started</h3>
                     <ul class="list-unstyled text-small">
                         <li class="mb-2">
-                            <a href="./index.html#getStartedTable">
+                            <a href="../index.html#getStartedTable">
                                 <span class="link-content">Install</span><span class="link-arrow fa fa-angle-right fa-xs"></span></a>
                         </li>
                         <li class="mb-2">
-                            <a href="/pytorch">
+                            <a href="../pytorch">
                                 <span class="link-content">PyTorch</span><span class="link-arrow fa fa-angle-right fa-xs"></span></a>
                         </li>
                     </ul>
@@ -41,15 +41,15 @@
                     <h3 class="footer-heading">Resources</h3>
                     <ul class="list-unstyled text-small">
                         <li class="mb-2">
-                            <a target="_blank" href="./blogs">
+                            <a target="_blank" href="../blogs">
                                 <span class="link-content">Blogs</span><span class="link-arrow fa fa-angle-right"></span></a>
                         </li>
                         <li class="mb-2">
-                            <a href="docs/tutorials/">
+                            <a href="../docs/tutorials/">
                                 <span class="link-content">Tutorials</span><span class="link-arrow fa fa-angle-right fa-xs"></span></a>
                         </li>
                         <li class="mb-2">
-                            <a href="docs/api/">
+                            <a href="../docs/api/">
                                 <span class="link-content"><abbr title="Application Program Interface">APIs</abbr></span><span class="link-arrow fa fa-angle-right fa-xs"></span></a>
                         </li>
                     </ul>
@@ -58,7 +58,7 @@
             </div>
             <div class="row pt-4 pb-4 text-center-sm">
                 <div class="col-12">
-                    <a href="./index.html"><img class="mb-md-2 mb-0 onnx-footer-logo" src="images/svg/ONNX-Runtime-logo-white.svg" alt="ONNX Runtime Home"></a>
+                    <a href="../index.html"><img class="mb-md-2 mb-0 onnx-footer-logo" src="../images/svg/ONNX-Runtime-logo-white.svg" alt="ONNX Runtime Home"></a>
                     <p class="text-copyright py-4 ml-md-5">Copyright &copy; Microsoft. All rights reserved.
                     </p>
                 </div>
