--- a/blogs/pytorch-on-the-edge.html
+++ b/blogs/pytorch-on-the-edge.html
@@ -73,9 +73,8 @@
             <div id="skipMain" role="main">
                 <div class="outer-container mx-auto py-5">
 
-                    <section>
-
-                    <div class="container-fluid">
+                    <section class="blue-title-columns py-md-5 pb-4 pt-4 mt-5">
+                        <div class="container-fluid">
                         <h1 class="r-heading">Run PyTorch models on the edge</h1>
     
                             <div class="row">
@@ -331,8 +330,6 @@ func trainStep(inputData: [Data], labels: [Int64]) throws  {
                     </section>
                 </div>
             </div>
-        </div>
-    </div
     </div>
     <!-- Partial footer.html Start-->
     <div w3-include-html="footer.html"></div>
