Try to fix header formatting

--- a/blogs/pytorch-on-the-edge.html
+++ b/blogs/pytorch-on-the-edge.html
@@ -58,6 +58,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/custom.css">
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/prism.css"  />
+
 
 </head>
 
@@ -73,7 +75,7 @@
             <div id="skipMain" role="main">
                 <div class="outer-container mx-auto py-5">
 
-                    <section class="blue-title-columns py-md-5 pb-4 pt-4 mt-5">
+                    <section class="py-md-5 pb-4 pt-4 mt-5">
                         <div class="container-fluid">
                         <h1 class="r-heading">Run PyTorch models on the edge</h1>
     
@@ -331,6 +333,7 @@ func trainStep(inputData: [Data], labels: [Int64]) throws  {
                 </div>
             </div>
     </div>
+    </div>
     <!-- Partial footer.html Start-->
     <div w3-include-html="footer.html"></div>
     <!-- Partial footer.html End-->
@@ -346,6 +349,8 @@ func trainStep(inputData: [Data], labels: [Int64]) throws  {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/js/bootstrap.min.js"
 	integrity="sha512-7rusk8kGPFynZWu26OKbTeI+QPoYchtxsmPeBqkHIEXJxeun4yJ4ISYe7C6sz9wdxeE1Gk3VxsIWgCZTc+vX3g=="
 	crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="../js/prism.js"></script>
+
 </body>
 
 </html>
