Add Kotlin and Swift to code syntax highlighting

--- a/blogs/pytorch-on-the-edge.html
+++ b/blogs/pytorch-on-the-edge.html
@@ -226,7 +226,7 @@ static void Main(string[] args)
 
                                     <p>As an example, the relevant snippet of an <a href="https://github.com/microsoft/onnxruntime-inference-examples/tree/main/mobile/examples/speech_recognition">Android mobile app</a> to perform speech transcription on short samples of audio, is shown below.</p>
 
-                                    <pre><code class="language-swift">
+                                    <pre><code class="language-kotlin">
 init {
     val env = OrtEnvironment.getEnvironment()
     val sessionOptions = OrtSession.SessionOptions()
