--- a/blogs/pytorch-on-the-edge.html
+++ b/blogs/pytorch-on-the-edge.html
@@ -47,7 +47,7 @@
     <meta name="description" content="Learn how to deploy popular and cutting edge PyTorch models such as stable diffusion, whisper and other transformer models on web, mobile and desktop">
     <meta name="og:title" content="Run PyTorch models on the edge">
     <meta name="og:description" content="Learn how to deploy popular and cutting edge PyTorch models such as stable diffusion, whisper and other transformer models on web, mobile and desktop">
-    <meta name="og:image" content="https://onnxruntime.ai/images/pytorch-on-the-edge.png">
+    <meta name="og:image" content="../images/pytorch-on-the-edge.png">
     <link rel="icon" href="../images/ONNXRuntime-Favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/css/bootstrap.min.css"
